--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,16 @@
     "experimentalDecorators": true,
     "importHelpers": true,
     "target": "ES2022",
-    "module": "preserve"
+    "module": "preserve",
+    "paths": {
+      "models": [
+        "./dist/models"
+      ],
+      "ui-components": [
+        "./dist/ui-components",
+        "./dist/ui-components"
+      ]
+    }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
@@ -29,6 +38,24 @@
     },
     {
       "path": "./tsconfig.spec.json"
+    },
+    {
+      "path": "./projects/ui-components/tsconfig.lib.json"
+    },
+    {
+      "path": "./projects/ui-components/tsconfig.spec.json"
+    },
+    {
+      "path": "./projects/ui-components/tsconfig.lib.json"
+    },
+    {
+      "path": "./projects/ui-components/tsconfig.spec.json"
+    },
+    {
+      "path": "./projects/models/tsconfig.lib.json"
+    },
+    {
+      "path": "./projects/models/tsconfig.spec.json"
     }
   ]
 }
