--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -4,12 +4,12 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/spec",
-    "types": [
-      "jasmine"
-    ]
+    "types": ["jasmine"]
   },
   "include": [
     "src/**/*.d.ts",
-    "src/**/*.spec.ts"
+    "src/**/*.spec.ts",
+    "src/app/core/services/statistics/statistics.spec.ts",
+    "src/app/core/services/statistics/statistics.service.ts"
   ]
 }
